Refactor schedule layout and internationalization: replace hardcoded dimensions with dynamic layouts and add multilingual support for day labels.